# A2O4-Server

./: .gitignore  ao3.py  api.py  common.py  config.example.toml  database_setup.sql  kindle.py  pyproject.toml  sqlite.py
A2O4/: __init__.py  ao3.py  common.py  config.py  kindle.py  sqlite.py
AO3LS/: ao3.py  common.py  config.py  kindle.py  sqlite.py
tests/: __init__.py  test_ao3.py  test_sqlite.py
tests/fixtures/sqlite/: delete_test.sql
