[project]
name = "A2O4"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
  "Flask>=3.0.0",
  "Flask-Cors>=4.0.0",
  "paramiko>=3.4.0",
  "toml>=0.10.2",
  "ao3_api@git+https://github.com/JustinHJJohnson/ao3_api"
]

[project.optional-dependencies]
dev = [
    "mock>=5.1.0",
    "ruff>=0.2.2",
    "pyright>=1.1.352",
]

[tool.ruff]
extend-exclude = [
    "__init__.py",
]

[tool.pyright]
include = ["A2O4", "api.py", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]

reportMissingImports = true
reportMissingTypeStubs = true

pythonVersion = "3.12"
pythonPlatform = "Linux"
